--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index --ignore maylu.json"
+    "dev": "nodemon src/index --ignore maylu.json",
+    "start": "node src/index"
   },
   "keywords": [],
   "author": "",
