--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "morgan": "^1.10.0",
+    "open": "^8.4.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
